crates/ent/derive_ent/tests/ui/item-is-not-a-struct.rs
use derive_ent::Ent;

// you will get rust-analyzer errors here, it's intentional :)
#[derive(Ent)]
enum Foo {}

fn main() {}
